hard-gists/1186126/run.log
=== Docker Run Log for 1186126 ===
Started at: Mi 29. Okt 11:58:06 CET 2025

[2025-10-29 11:58:07] START: Running container for 1186126
[2025-10-29 11:58:07] SUCCESS: Container 333e0758598b1857d1fa8a138a4a8c1c938d10d2bade41fd580c19220c8bead3 started for 1186126
=== Container logs for 1186126 ===
  File "/snippet.py", line 29
    print "Opening file '%s'" % (filename)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1186126 ===
[2025-10-29 11:58:09] INFO: Container 333e0758598b1857d1fa8a138a4a8c1c938d10d2bade41fd580c19220c8bead3 has stopped
